--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sstudio.pemesanansalonmobilmotor">
+          package="com.sstudio.otocare">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,27 +11,16 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.sstudio.otocare.ui.login.LoginActivity">
         </activity>
-        <activity android:name=".BookingActivity">
+        <activity android:name="com.sstudio.otocare.BookingActivity">
         </activity>
-        <activity android:name=".CobaActivity">
+        <activity android:name="com.sstudio.otocare.CobaActivity">
         </activity>
-        <activity android:name=".HomeActivity">
+        <activity android:name="com.sstudio.otocare.HomeActivity">
         </activity>
 
-        <meta-data
-                android:name="com.facebook.accountkit.ApplicationName"
-                android:value="@string/app_name"/>
-        <meta-data
-                android:name="com.facebook.sdk.ApplicationId"
-                android:value="@string/FACEBOOK_APP_ID"/>
-        <meta-data
-                android:name="com.facebook.accountkit.ClientToken"
-                android:value="@string/ACCOUNT_KIT_CLIENT_TOKEN"/>
-
-        <activity android:name="com.facebook.accountkit.ui.AccountKitActivity"/>
-        <activity android:name=".SplashScreen">
+        <activity android:name="com.sstudio.otocare.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
