--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0-beta03'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.4.0-alpha04'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha05'
