--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'com.google.gms.google-services'
+}
 
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.google.gms.google-services'
+apply from: '../shared_dependencies.gradle'
 
 android {
     compileSdkVersion 30
@@ -21,47 +22,33 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    androidExtensions {
-        experimental = true
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
+    implementation project(":core")
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
-    implementation 'androidx.core:core-ktx:1.5.0-beta03'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta01'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.4.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha05'
 
-    implementation 'com.google.android.material:material:1.3.0'
+
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.ss.bannerslider:bannerslider:2.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.shuhart.stepview:stepview:1.5.1'
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
-
-    //firebase
-    implementation 'com.google.firebase:firebase-database:19.7.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.3'
-    implementation 'com.google.firebase:firebase-firestore:22.1.1'
-    // Import the BoM for the Firebase platform
-    implementation platform('com.google.firebase:firebase-bom:26.7.0')
-
-    // Declare the dependency for the Firebase Authentication library
-    // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'com.hbb20:ccp:2.4.5'
     implementation 'androidx.browser:browser:1.3.0'
