--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".MyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -14,8 +15,6 @@
         <activity android:name="com.sstudio.otocare.ui.login.LoginActivity">
         </activity>
         <activity android:name="com.sstudio.otocare.ui.booking.BookingActivity"></activity>
-        <activity android:name="com.sstudio.otocare.CobaActivity">
-        </activity>
         <activity android:name="com.sstudio.otocare.ui.home.HomeActivity"></activity>
 
         <activity android:name="com.sstudio.otocare.SplashScreen">
