--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sstudio.otocare">
+        package="com.sstudio.otocare">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
             android:name=".MyApplication"
@@ -12,10 +14,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.sstudio.otocare.ui.login.LoginActivity">
-        </activity>
-        <activity android:name="com.sstudio.otocare.ui.booking.BookingActivity"></activity>
-        <activity android:name="com.sstudio.otocare.ui.home.HomeActivity"></activity>
+        <activity android:name="com.sstudio.otocare.ui.login.LoginActivity"></activity>
+        <activity android:name="com.sstudio.otocare.ui.booking.BookingActivity" />
+        <activity android:name="com.sstudio.otocare.ui.home.HomeActivity" />
 
         <activity android:name="com.sstudio.otocare.SplashScreen">
             <intent-filter>
