--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.sstudio.otocare.ui.login.LoginActivity"></activity>
-        <activity android:name="com.sstudio.otocare.ui.booking.BookingActivity" />
-        <activity android:name="com.sstudio.otocare.MainActivity" />
-
-        <activity android:name="com.sstudio.otocare.SplashScreen">
+        <activity android:name=".ui.cart.CartActivity"></activity>
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.booking.BookingActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
